Store value frontend
