# Rework/HighCode.Domain/ApiRequests/Admin/AddStoreValueCommand.cs
@@ -1,11 +1,10 @@
-﻿using HighCode.Domain.Constants;
-using HighCode.Domain.Responses;
+﻿using HighCode.Domain.Responses;
 using MediatR;
 
 namespace HighCode.Domain.ApiRequests.Admin;
 
 public class AddStoreValueCommand : IRequest<Result<SimpleResponse>>
 {
-    public StoreValueType Type { get; set; }
+    public int Type { get; set; }
     public string Value { get; set; }
 }
